add ask selph feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+# app
 app.folder.selphies=../files/selphies
+
+app.ai.tokeniser=/models/en-token.bin
+app.ai.pos-tagger=/models/en-pos-maxent.bin
 
 # data source config
 quarkus.datasource.db-kind=postgresql
