--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <version>1.4.2.Final</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.opennlp</groupId>
+      <artifactId>opennlp-tools</artifactId>
+      <version>1.9.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
