--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>opennlp-tools</artifactId>
       <version>1.9.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.9</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
