--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>commons-text</artifactId>
       <version>1.9</version>
     </dependency>
+    <dependency>
+      <groupId>net.sf.sociaal</groupId>
+      <artifactId>freetts</artifactId>
+      <version>1.2.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
