--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.http.port=8000
 quarkus.http.body.handle-file-uploads=true
 quarkus.http.body.delete-uploaded-files-on-end=true
+quarkus.http.cors=true
 
 # openapi config
 mp.openapi.extensions.smallrye.operationIdStrategy=METHOD
